=========================================================================
CHANGE LOG
=========================================================================

2008-06-16 Warren L. DeLano <warren@delsci.com>	

	* improved compatibility when building under OSX/X11 w/o Fink
	
2008-06-01 Warren L. DeLano <warren@delsci.com>	

	* session_cache_optimize setting

	* fixed cache optimize

	* added Ctrl-Fkey and Ctrl-PgDn/Up support inside Tcl/Tk
	
2008-05-31 Warren L. DeLano <warren@delsci.com>	

	* updated help menu

	* mouse_grid setting
	
2008-05-28 Warren L. DeLano <warren@delsci.com>	

	* added mesh_cutoff and related mesh settings 

	* added mouse_grid setting for hiding the mouse/keyboard info
	
2008-05-28 Warren L. DeLano <warren@delsci.com>	

	* finished .MAE reader (at least for now...)

	* quashed race conditions associated with the geometry cache
	
2008-05-22 Warren L. DeLano <warren@delsci.com>	

	* create copies object color if source atoms are from one object
	
2008-05-21 Warren L. DeLano <warren@delsci.com>	

	* valence command enhanced for guessing & copying valences
	
2008-05-20 Warren L. DeLano <warren@delsci.com>	

	* now assumes HETATM c1ccnc1 is c1ccn[H]c1
	
2008-05-19 Warren L. DeLano <warren@delsci.com>	

	* skins now working better
	
2008-05-15 Warren L. DeLano <warren@delsci.com>	

	* increased surface generation performance
	
2008-05-09 Warren L. DeLano <warren@delsci.com>	

	* new setting: geometry_export_mode partially implemented
	
	* initial 3Dconnexion SpaceNavigator support for Mac (others coming)
	
2008-05-02 Warren L. DeLano <warren@delsci.com>	

	* fixed nasty crash bug with distance command & multistate objs
	
	* incorporated various fixes for pymol2.PyMOL instances.
	
2008-05-01 Warren L. DeLano <warren@delsci.com>	

	* converted color names storage over to a dictionary (lexicon)

	* fixed bug with color redefinition in the external gui
	
2008-04-30 Warren L. DeLano <warren@delsci.com>	

	* more fixes for Vista compatibility
	